Fix left-align of schedule titles and rebuild min.css from SCSS

--- a/docs/_static/conf/scss/main-2026.scss
+++ b/docs/_static/conf/scss/main-2026.scss
@@ -280,6 +280,7 @@ body .page-content {
 
             .item-content {
                 flex: 1;
+                text-align: left;
             }
         }
     }
